--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <p>
           My name is Prottoy Chakraborty , I am a developer based in Kolkata,
           India.
-          I am a self-driven and agile individual with a pasion for learning new
+          I am a self-driven and agile individual with a passion for learning new
           things.
-         When i'm not building software, i like to read about history and philosphy.
+         When i'm not building software, i like to read about history and philosophy.
         </p>
       </div>
     </div>
