--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <img
           class="main_img"
-          src="https://www.flaticon.com/svg/vstatic/svg/778/778538.svg?token=exp=1615049163~hmac=208827fe9714c342342cc0cf26a98db8"
+          src="Images/coding.png"
         />
       </div>
     </div>
