--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
        <hr>
 
        <!--   -->
-
+    <div class="wrap">
 
         <!--profile card-->
     <div class="profile_desc">
@@ -108,7 +108,7 @@
     </div>
 
   <!--   -->
-
+</div>
   <hr>
 
 <!-- skills -->
