--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#About_section">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact me</a>
@@ -72,24 +72,22 @@
 
       <!--upper div-->
 
-      <div class="upper">
         <div class="upper-text">
           <h1 class="main">I'm Prottoy</h1>
           <p class="secondary">a developer</p>
         </div>
-        <div class="main_img">
-        <img
+        <div class="main_img" >
+        <img id="codeimg"
           src="Images/coding.png"
         />
         </div>
-      </div>
        <hr>
 
        <!--   -->
-    <div class="wrap">
 
         <!--profile card-->
-    <div class="profile_desc">
+        <a name="About_section"></a>
+        <div class="profile_desc">
       <img
         class="profile_img"
         src="Images/1609478278858 (1).jpg"
@@ -108,7 +106,7 @@
     </div>
 
   <!--   -->
-</div>
+
   <hr>
 
 <!-- skills -->
@@ -149,12 +147,60 @@
 
 <!-- tech stack-->
 <h1 class="skill_head"> What I Use</h1>
-<div class="d-inline-flex p-2">
-  
+<div class="ca">
+  <div class="row">
+        <div class="col">
+  <div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/css-3.png" alt="Card image cap">
+</div>
+<div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/download.png" alt="Card image cap">
+</div>
+</div>
+        <div class="col">
+  <div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/iconfinder_code-programming-html-markup-develop-layout-language_652583.png" alt="Card image cap">
+</div>
+<div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/iconfinder_code-programming-javascript-software-develop-command-language_652581.png" alt="Card image cap">
+</div>
+</div>
+<div class="col">
+  <div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/react-js-blog-header.png" alt="Card image cap">
+</div>
+<div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/nodejs.png" alt="Card image cap">
+</div>
+</div>
+<div class="col">
+  <div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/png-transparent-microsoft-azure-sql-database-microsoft-sql-server-database-blue-text-logo-thumbnail.png" alt="Card image cap">
+</div>
+<div class="card-sm" style="width: 15rem;">
+  <img class="card-img-top" src="Images/icons/MongoDB-Logo.png" alt="Card image cap">
+</div>
+</div>
+    </div>
 
 </div>
 
 
+<!--   -->
+<!--contact Me-->
+<h1 class="skill_head"> Contact me</h1>
+<div class="socials">
+  <h2>
+    Reach out to me on
+  </h2>
+  <a href="https://github.com/ProttoyChakraborty"><img src="Images/github.png" id="socials_img"> </a>
+  <a href="https://www.linkedin.com/in/prottoy-chakraborty-1b7660131/"><img src="Images/linkedin.png" id="socials_img"></a>
+</div>
+
+ 
+
+<div class="foot">
+  <h4>Made by Prottoy Chakraborty © 2021</h4>
     <footer>
       Icons made by
       <a href="https://www.flaticon.com/authors/prettycons" title="prettycons"
@@ -163,5 +209,6 @@
       from
       <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
     </footer>
+    </div>
   </body>
 </html>
