--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-
+      <div class="nav">
       <nav class="navbar navbar-expand-lg navbar-light">
         <button
           class="navbar-toggler"
@@ -64,11 +64,12 @@
               <a class="nav-link" href="#About_section">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
+              <a class="nav-link" href="#contact_section">Contact me</a>
             </li>
           </ul>
         </div>
       </nav>
+      </div>
 
       <!--upper div-->
 
@@ -188,6 +189,7 @@
 
 <!--   -->
 <!--contact Me-->
+<a name="contact_section"></a>
 <h1 class="skill_head"> Contact me</h1>
 <div class="socials">
   <h2>
